--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.15.3"
+    "@tailwindcss/vite": "^4.1.16",
+    "astro": "^5.15.3",
+    "daisyui": "^5.4.3",
+    "pocketbase": "^0.26.3",
+    "pocketbase-types": "^3.0.0",
+    "tailwindcss": "^4.1.16"
   }
 }
