installation de node

--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.5.0",
     "@tailwindcss/vite": "^4.1.16",
     "astro": "^5.15.3",
     "daisyui": "^5.4.3",
+    "node": "^25.1.0",
     "pocketbase": "^0.26.3",
     "pocketbase-types": "^3.0.0",
     "tailwindcss": "^4.1.16"
