--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           npm run build
           cp package.json dist/server/
+
       - name: Deploy to VPS via SCP
         uses: appleboy/scp-action@v0.1.3
         with:
@@ -32,12 +33,12 @@ jobs:
           username: ${{ secrets.USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22007
-          source: "dist/*"
-          target: "/var/www/ta-vue/"
-          strip_components: 1
-          rm: false
+          source: "dist/"
+          target: "/var/www/ta-vue"
+          rm: true
           overwrite: true
           debug: true
+
       - name: Fix permissions on VPS
         uses: appleboy/ssh-action@v1.0.0
         with:
@@ -46,8 +47,10 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22007
           script: |
-            chmod -R 755 /var/www/ta-vue/client /var/www/ta-vue/server
+            sudo chown -R etudiant:etudiant /var/www/ta-vue
+            chmod -R 755 /var/www/ta-vue
             find /var/www/ta-vue -type f -exec chmod 644 {} \;
+
       - name: Install production dependencies on VPS
         uses: appleboy/ssh-action@v1.0.0
         with:
@@ -58,6 +61,5 @@ jobs:
           script: |
             cd /var/www/ta-vue/server
             npm ci
-            npm install astro
-            npm install send server-destroy
+            npm install astro send server-destroy
             PORT=8091 pm2 restart ta-vue || PORT=8091 pm2 start entry.mjs --name ta-vue
