--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,6 @@ jobs:
         run: |
           npm run build
           cp package.json dist/server/
-
       - name: Deploy to VPS via SCP
         uses: appleboy/scp-action@v0.1.3
         with:
@@ -34,23 +33,11 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22007
           source: "dist/*"
-          target: "/var/www/ta-vue"
+          target: "/var/www/ta-vue/"
+          strip_components: 1
           rm: false
           overwrite: true
           debug: true
-
-      - name: Fix permissions on VPS
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 22007
-          script: |
-            sudo chown -R etudiant:etudiant /var/www/ta-vue
-            chmod -R 755 /var/www/ta-vue
-            find /var/www/ta-vue -type f -exec chmod 644 {} \;
-
       - name: Install production dependencies on VPS
         uses: appleboy/ssh-action@v1.0.0
         with:
@@ -61,5 +48,6 @@ jobs:
           script: |
             cd /var/www/ta-vue/server
             npm ci
-            npm install astro send server-destroy
+            npm install astro
+            npm install send server-destroy
             PORT=8091 pm2 restart ta-vue || PORT=8091 pm2 start entry.mjs --name ta-vue
