--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "astro": "^5.15.3",
     "daisyui": "^5.4.3",
     "node": "^25.1.0",
+    "openai": "^4.104.0",
     "pocketbase": "^0.26.3",
     "pocketbase-types": "^3.0.0",
     "tailwindcss": "^4.1.16"
